<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BloodDonar</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Blood Donar</string>
    <string name="Name">Name :</string>
    <string name="blood_label">Blood Group :</string>

    <string-array name="blood_groups">
        <item>Select Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string name="curr_loc">Current Place :</string>
    <string name="contact">Contact No :</string>
    <string name="enter">Enter</string>
    <string name="next">Next</string>
    <string name="showMaps">Maps</string>
    <string name="title_activity_view_place">ViewPlace</string>
    <string name="Search">Search the place</string>
    <string name="title_activity_login">Login</string>

</resources>